# login-service-rust-k8s-demo

./: .gitignore  .helmignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
auto/: apply-resources.sh  create-kubeconfig.sh  generate-static-user.sh  setup-ingress.sh  setup-monitoring.sh
deployment/: Chart.yaml  values.yaml
deployment/login-service/: Chart.yaml  values.yaml
deployment/login-service/templates/: ingress.yaml  monitor.yaml  secret.yaml
deployment/login-service/templates/login-service/: deployment.yaml  service.yaml
deployment/login-service/templates/rbac/: cluster-role-binding.yaml  cluster-role.yaml  role-binding.yaml  role.yaml
deployment/monitor/: Chart.yaml  values.yaml
deployment/monitor/files/dashboards/: login-service-dashboard.json
deployment/monitor/templates/: configMap.yaml
deployment/templates/: ingress.yaml  namespace.yaml  secret.yaml  service.yaml
deployment/templates/login-service/: deployment.yaml  service.yaml
deployment/templates/monitor/: monitor.yaml
src/: auth.rs  errors.rs  main.rs  router.rs
src/handler/: auth.rs  healthz.rs  metrics.rs  mod.rs
tests/: integration_test.rs
