[package]
name = "login-service"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"
deadpool-postgres = { version = "0.10.5"}
tokio-postgres = "0.7"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
lazy_static = "1.4"
once_cell = "1.21.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

